fixed main menu line spacing problem

--- a/docroot/sites/default/themes/maxim_base/css/global.css
+++ b/docroot/sites/default/themes/maxim_base/css/global.css
@@ -1,5 +1,3 @@
-/* This file will hold the main styles for your website. */
-
 /* body */
 body { background-color:#D8D8D8; font-size: 62.5%; color: #3C3C3C; font-family: Helvetica, Arial, sans-serif; }
 
@@ -39,7 +37,7 @@ em, em span { font-style: italic; }
 #zone-utility-menu { background-color:#3e3e3e; border-bottom: 1px solid #3e3e3e; }
 
 /* top navigation */
-#zone-menu-wrapper { background-color:#000; }
+#zone-menu-wrapper { background-color:#000; height: 29px; }
 #zone-menu-wrapper.hide-bg { background-color:transparent; }
 #zone-menu { background-color:#000; }
 
